k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray
  namespace: xray
spec:
  selector:
    app: xray
  sessionAffinity: None
  ports:
    - name: ws
      port: 10000
      targetPort: 10000
      protocol: TCP
